style.css
* {
  box-sizing: border-box;
}

:root {
  --orange: #feac5e;
  --purple: #c779d0;
  --white: #fff;
  --grey: #d9d9d9;
}

body {
  font-family: "M PLUS Rounded 1c", sans-serif;
  font-weight: 400;
  margin: 0;
  padding: 0;
}

header {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--orange);
  color: var(--white);
  text-transform: uppercase;
}

.boxes-wrapper {
  width: 100%;
  display: flex;
  justify-content: center;
  padding: 1rem;
}

.box {
  display: flex;
  flex-direction: column;
  width: 33.33%;
  height: 200px;
  margin: 1rem;
  padding: 1rem;
  border-radius: 10px;
  box-shadow: 0px 3px 20px var(--grey);
  color: var(--grey);
  font-weight: 700;
  font-size: 2rem;
}

.box-header,
.box-footer {
  display: flex;
  justify-content: center;
}

